<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_stamm_mode"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/view_as_grid"
        android:title="@string/menu_stamm_mode"/>
    
    <item
        android:id="@+id/menu_normal_mode"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/view_as_list"
        android:title="@string/menu_normal_mode"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>